fix width on mobile

--- a/components/Wrapper/Wrapper.module.css
+++ b/components/Wrapper/Wrapper.module.css
@@ -53,8 +53,8 @@
   @media screen and (max-width: 840px) {
     .wrapper{
         display: block;
-        min-width: 360px;
-        width: 360px;
+        min-width: 100vw;
+        width: 355px;
         min-height: 100vh;
         height: 100%;
     }
